--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-router": "^3.5.3",
     "vue-skeleton-webpack-plugin": "^1.2.2",
     "vuex": "^3.0.1",
+    "web-downloadfile": "^0.0.1",
     "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
