--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "better-scroll": "^1.15.2",
     "clipboard": "^2.0.6",
     "core-js": "^2.6.5",
+    "download": "^8.0.0",
     "eslint-plugin-import": "^2.22.1",
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.21",
@@ -53,6 +54,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "postcss-px2rem-exclude": "^0.0.6",
