--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
     "autoprefixer": "^9.6.0",
     "axios": "=0.18.0",
     "better-scroll": "^1.15.2",
     "clipboard": "^2.0.11",
     "core-js": "^2.6.5",
     "download": "^8.0.0",
+    "echarts": "^5.4.3",
     "eslint-plugin-import": "^2.22.1",
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.21",
+    "mkcert": "^3.2.0",
     "regenerator-runtime": "^0.13.3",
     "swiper": "^4.5.0",
     "vant": "^2.0.3",
