--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve --host dev.local.xdf.cn --port 5000",
     "mock": "vue-cli-service serve --host mock.local.xdf.cn --port 5000",
-    "d": "node ./src/views/node-down/index.js",
+    "down": "node ./src/views/node-down/index.js",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -19,6 +19,8 @@
     "echarts": "^5.4.3",
     "element-ui": "^2.15.14",
     "eslint-plugin-import": "^2.22.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lib-flexible": "^0.3.2",
     "lodash": "^4.17.21",
     "mkcert": "^3.2.0",
